--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyBQdVcKCe0q_vOBDUvJYpzwGpt_d_uTj4Q&v=3.31"></script>
-    <title>React App</title>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyBQdVcKCe0q_vOBDUvJYpzwGpt_d_uTj4Q&v=3.31"></script>
+    <title>ReactiveMaps Starter App</title>
   </head>
   <body>
     <noscript>
